[package]
name = "sandboxed-lit"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-sdk = "0.8.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
microsandbox = "0.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
